# lotto-analysis

./: Dockerfile  README.md  docker-compose.yml  lotto.xls  lotto.xlsx  pyproject.toml
lotto_analysis/: _utils.py  main.ipynb
lotto_analysis/common/: __init__.py  depth_logging.py  timer.py  utils.py
