[tool.poetry]
name = "lotto-analysis"
version = "0.1.0"
description = ""
authors = ["alchemine <djyoon0223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "6.5.6"
jupyterthemes = "0.20.0"
pandas = "^2.1.4"
seaborn = "^0.13.0"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
